# legal-document-format-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml
skills/legal-document-format/: SKILL.md
skills/legal-document-format/examples/: README.md  synthetic-award-fragment.md
skills/legal-document-format/references/: content-lock.md  exact-template.md  failure-modes.md  format-checklist.md  project-basis.md  routing.md  template-execution.md  visual-validation.md
skills/legal-document-format/scripts/: README.md  apply_docx_template.py  audit_docx_structure.py  audit_text.py  check_release_requirements.py  compare_docx_template_parity.py  compare_rendered_pages.py  format_gate.py  make_synthetic_docx.py  release_smoke.py  render_docx.sh
tests/: test_audit_docx_structure.py  test_audit_text.py  test_check_release_requirements.py  test_compare_rendered_pages.py  test_format_gate.py  test_make_synthetic_docx.py  test_release_smoke.py  test_template_v2.py
