[project]
name = "legal-document-format-skill"
version = "2.2.0"
description = "面向 AI 法律工作流的 DOCX 模板执行、内容锁定、渲染校验与格式门禁 Skill。"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
  "legaltech",
  "agent-skill",
  "docx",
  "openxml",
  "libreoffice",
  "legal-documents",
  "document-automation",
  "visual-validation",
  "quality-gate",
]

[project.urls]
Homepage = "https://github.com/lilialla/legal-document-format-skill"
Repository = "https://github.com/lilialla/legal-document-format-skill"
Changelog = "https://github.com/lilialla/legal-document-format-skill/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
